src/objects/vlocity_ins__DocumentTemplateSectionCondition__c.object
<CustomObject>
    <description>Represents the condition that is applied to the document section for dynamic display in a generated contract document. Conditions can be simple product based conditions or those based on Vlocity Entity Filters</description>
    <fields>
        <fullName>vlocity_ins__ApplicableItemType__c</fullName>
        <description>If condition is based on a entity filter, it denotes the entity the filter is applied on</description>
        <label>ApplicableItemType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConditionalExpression__c</fullName>
        <label>Conditional Expression</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentTemplateSectionId__c</fullName>
        <description>Section Identifier</description>
        <label>Document Template Section</label>
        <referenceTo>vlocity_ins__DocumentTemplateSection__c</referenceTo>
        <relationshipLabel>Document Template Section Conditions</relationshipLabel>
        <relationshipName>DocumentTemplateSectionConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity filter that defines the condition</description>
        <label>Vlocity Entity Filter</label>
        <referenceTo>vlocity_ins__EntityFilter__c</referenceTo>
        <relationshipLabel>Document Template Section Conditions</relationshipLabel>
        <relationshipName>Document_Template_Section_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Document Template Section Conditions</relationshipLabel>
        <relationshipName>DocumentTemplateSectionConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Template Section Condition</label>
    <nameField>
        <label>Document Template Section Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Template Section Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>